--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,8 +4,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: base.$font-primary;
 }
 
 a {
@@ -23,7 +22,7 @@ a {
   }
   body {
     color: white;
-    background: base.$floral-white;
+    background: base.$background-color;
   }
 }
 
