set up data hydration for user posts

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,6 +26,17 @@ a {
   }
 }
 
+// Index Page
+.feed-container {
+  margin-top: 8rem;
+  @include base.flexContainer;
+  flex-direction: column;
+  color: base.$secondary-text-color;
+}
+.btn-load-more {
+  @include base.button;
+}
+
 // Enter Page
 .btn-google {
   @include base.button;
