--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -11,6 +11,12 @@ $text-color: black;
 $font-primary: "Open Sans", sans-serif;
 $font-secondary: "Merriweather", serif;
 
+@mixin flexContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @mixin button {
   background-color: $button-color;
   border: none;
@@ -26,4 +32,16 @@ $font-secondary: "Merriweather", serif;
   border-radius: 0.25rem;
   cursor: pointer;
   margin: 0.5rem 1rem 0.5rem 0;
+}
+
+@mixin card {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  background-color: White;
+  border: 1px solid gray;
+  border-radius: 8px;
+  box-shadow: 10px 10px 5px gray;
+  background-color: white;
 }
