implementing form validation and adding spicy ramen(like) component

--- a/pages/admin/AdminPostsPage.module.scss
+++ b/pages/admin/AdminPostsPage.module.scss
@@ -74,7 +74,18 @@
 .btnSave {
   @include base.button;
 }
+
+.publishedContainer {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  border: none;
+}
 .checkbox {
   display: inline;
   width: auto;
+}
+
+.textDanger {
+  font-weight: bold;
+  color: red;
 }
