--- a/components/NavBar.module.scss
+++ b/components/NavBar.module.scss
@@ -24,6 +24,9 @@
 
   img {
     border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
   }
 
   li {
@@ -47,4 +50,12 @@
 }
 .loginbtn:hover {
   filter: brightness(90%);
+}
+
+.btnSignOut {
+  @include base.button;
+}
+
+.pushLeft {
+  margin-left: auto;
 }
