--- a/pages/[username]/UserProfilePage.module.scss
+++ b/pages/[username]/UserProfilePage.module.scss
@@ -1,6 +1,59 @@
 @use "/styles/base";
 
-.container {
+.indexContainer {
   @include base.flexContainer;
   flex-direction: column;
+}
+
+.container {
+  min-height: 100vh;
+  display: flex;
+
+  section {
+    width: 80%;
+    margin-right: 1rem;
+  }
+
+  aside {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    min-width: 250px;
+    text-align: center;
+    position: sticky;
+    top: 80px;
+    height: 0;
+    min-height: 300px;
+    @include base.card;
+    padding: 2rem;
+    margin: 1rem 0;
+    color: black;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .container {
+    flex-direction: column;
+
+    section {
+      width: 100%;
+    }
+
+    aside {
+      width: 100%;
+      position: relative;
+    }
+  }
+}
+
+.btnSignUp {
+  @include base.button;
+}
+.btnEdit {
+  @include base.button;
+  background-color: base.$accent-color;
+  &:hover {
+    filter: brightness(90%);
+  }
 }
