--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -32,13 +32,12 @@ $font-secondary: "Merriweather", serif;
   border-radius: 0.25rem;
   cursor: pointer;
   margin: 0.5rem 1rem 0.5rem 0;
+  &:hover {
+    filter: brightness(90%);
+  }
 }
 
 @mixin card {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
   background-color: White;
   border: 1px solid gray;
   border-radius: 8px;
