--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -35,14 +35,11 @@ $font-secondary: "Merriweather", serif;
   text-align: center;
   justify-content: center;
   text-decoration: none;
-  font-family: "Noto Sans", sans-serif;
+  font-family: $font-primary;
   font-weight: bold;
   border-radius: 0.25rem;
   cursor: pointer;
   margin: 0.5rem 1rem 0.5rem 0;
-  &:hover {
-    filter: brightness(90%);
-  }
 }
 
 @mixin card {
