--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -48,6 +48,12 @@ img {
 }
 .btn-load-more {
   @include base.button;
+  &:hover {
+    background-color: base.$background-color;
+    border: 2px solid base.$button-color;
+    border-radius: 8px;
+    color: base.$button-color;
+  }
 }
 
 // Enter Page
